# gupo

./: .gitignore  evaluate.py  generate.py  generate_rm_eval.py  generate_rmeval.py  hf_upload.py  pyproject.toml  run_eval_mlp.sh  synthetic_dataset.py  train.py
config/: config.yaml
config/loss/: alphadpo.yaml  dpo.yaml  gupo.yaml  ipo.yaml  rdpo.yaml  simpo.yaml
config/model/: llama1b.yaml  llama3b.yaml  llama8b.yaml  qwen2.5_1.5b.yaml  qwen2.5_7b.yaml
evaluator/: armorm_eval.py  gpt_eval_ambiguity.py  gpt_eval_harmlessness_batched.py  gpt_eval_win_rate.py  gpt_eval_win_rate_batched.py
trainers/: alphadpo_trainers.py  dpo_trainers.py  gupo_trainers.py  ipo_trainers.py  rdpo_trainers.py  simpo_trainers.py
utils/: convert_to_hf.py  debug_weights.py  preference_datasets.py  utils.py
